--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
                   <div class="carousel-item active">
                     <div class="detail_box">
                       <h1>
-                        CREATIVE <br />
+                        PHOTOSUTRA <br />
                         PHOTOGRAPHY
                       </h1>
                       <p>
@@ -134,7 +134,7 @@
                   <div class="carousel-item ">
                     <div class="detail_box">
                       <h1>
-                        CREATIVE <br />
+                        PHOTOSUTRA <br />
                         PHOTOGRAPHY
                       </h1>
                       <p>
@@ -149,7 +149,7 @@
                   <div class="carousel-item ">
                     <div class="detail_box">
                       <h1>
-                        CREATIVE <br />
+                        PHOTOSUTRA <br />
                         PHOTOGRAPHY
                       </h1>
                       <p>
@@ -682,9 +682,6 @@
     
     <p>
       &copy; 2020 All Rights Reserved By
-      <a href="https://html.design/">Free Html Templates</a><br>
-      Distributed By
-      <a href="https://themewagon.com/" target="_blank">ThemeWagon</a>
     </p>
     
   </section>
