--- a/contact.html
+++ b/contact.html
@@ -12,7 +12,7 @@
   <meta name="description" content="" />
   <meta name="author" content="" />
 
-  <title>Ace</title>
+  <title>Photosutra</title>
 
   <!-- slider stylesheet -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.5.9/slick.min.css">
@@ -202,7 +202,7 @@
               <a href="">
                 <img src="images/call.png" alt="">
                 <span>
-                  ( +01 1234567890 )
+                  ( +91 9624715133 )
                 </span>
               </a>
             </div>
@@ -210,7 +210,7 @@
               <a href="">
                 <img src="images/mail.png" alt="">
                 <span>
-                  demo@gmail.com
+                  neelvaishnav0@gmail.com
                 </span>
               </a>
             </div>
